objects/MC4SF__MC_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Abuse_Reports__c</fullName>
        <label>Abuse Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Analytics_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Analytics Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Analytics__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Analytics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Archive_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Archive URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__Authenticate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Auto_Convert_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Convert Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Auto_FB_Post__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto FB Post</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Auto_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Footer Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Auto_Tweet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Tweeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Campaign_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Campaign_Share_Report__c</fullName>
        <formula>HYPERLINK(
	IF(ISBLANK(MC4SF__Report_Secure_URL__c), MC4SF__Report_URL__c, MC4SF__Report_Secure_URL__c),  
	IF(ISBLANK(MC4SF__Report_Secure_URL__c), MC4SF__Report_URL__c, MC4SF__Report_Secure_URL__c), 
	&quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Share Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__ClickTale_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClickTale Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__ClickTale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickTale Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Content_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Create_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Create Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Ecomm360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ecomm360 Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Facebook_Likes__c</fullName>
        <label>Facebook Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Forwards_Opens__c</fullName>
        <label>Forwards Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Forwards__c</fullName>
        <label>Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__From_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MC4SF__From_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Google_Analytics_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Google_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Analytics Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Goooal_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Goal Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Goooal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__HTML_Clicks_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Clicks Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Hard_Bounces__c</fullName>
        <label>Hard Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Hourly_Stats_Emails_Sent__c</fullName>
        <label>Hourly Stats - Emails Sent</label>
        <summarizedField>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__Emails_Sent__c</summarizedField>
        <summaryForeignKey>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__MC_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC4SF__Hourly_Stats_Unique_Opens__c</fullName>
        <label>Hourly Stats - Unique Opens</label>
        <summarizedField>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__Unique_Opens__c</summarizedField>
        <summaryForeignKey>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__MC_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC4SF__Hourly_Status_Recipients_Click__c</fullName>
        <label>Hourly Stats - Recipients Click</label>
        <summarizedField>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__Recipients_Click__c</summarizedField>
        <summaryForeignKey>MC4SF__MC_Campaign_Hourly_Stats__c.MC4SF__MC_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC4SF__Inline_CSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the campaign content&apos;s css was auto-inlined</description>
        <label>CSS Auto-Inlined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Click__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Click</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Audience</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Campaigns</relationshipLabel>
        <relationshipName>MC_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_Folder_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MailChimp Folder ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MailChimp ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MailChimp Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_List_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MailChimp Audience ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_Template_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MailChimp Template ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__New_Segment_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Segment Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__New_Segment_Match__c</fullName>
        <label>New Segment Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__New_Segment_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Segment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Opens_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opens Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Opens__c</fullName>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Recipient_Likes__c</fullName>
        <label>Recipient Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Report_Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Report_Secure_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Secure URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__Report_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__Segment_Opts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segment Opts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Segmented_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmented Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MC4SF__Send_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Soft_Bounces__c</fullName>
        <label>Soft Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Syntax_Errors__c</fullName>
        <label>Syntax Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Text_Clicks_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Clicks Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Timewarp_Schedule__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Timewarp Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Timewarp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timewarp Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__To_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Type_Opts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Opts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unique_Clicks__c</fullName>
        <label>Unique Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unique_Likes__c</fullName>
        <label>Unique Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unique_Opens__c</fullName>
        <label>Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Users_Who_Clicked__c</fullName>
        <label>Users Who Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Wizard_Status__c</fullName>
        <label>Wizard Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipients Saved</fullName>
                </value>
                <value>
                    <fullName>Setup Saved</fullName>
                </value>
                <value>
                    <fullName>Content Saved</fullName>
                </value>
                <value>
                    <fullName>PlainText Saved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MC Campaign</label>
    <listViews>
        <fullName>MC4SF__All</fullName>
        <columns>NAME</columns>
        <columns>MC4SF__Status__c</columns>
        <columns>MC4SF__Emails_Sent__c</columns>
        <columns>MC4SF__From_Email__c</columns>
        <columns>MC4SF__Subject__c</columns>
        <columns>MC4SF__Send_Time__c</columns>
        <columns>MC4SF__MC_List__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MC Campaign Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>